--- a/index.html
+++ b/index.html
@@ -3,10 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!--fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!--Iconos Font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <title>Tu Idea Gamer</title>
 
 </head>
 <body>
+    
+    <!--<header>
+        <div class="wrapper">
+            <div class="logo-t">
+                <img src="" alt="">
+            </div>
+
+            <div class="nav-contaco"></div>
+        </div>
+    </header>
+    <div class="portada-header"></div>
+    <nav></nav>-->
+    <div class="container">
+        <nav class="nav-main">
+            <!--opcional menu con header arriba-->
+            <img src="assets/img/Logo TIG1.png" alt="" class="nav-brand">
+            <ul class="nav-menu">
+                <!--Categorias-->
+                <li>
+                    <a href="#">Actualidad</a>
+                </li>
+                <li>
+                    <a href="#">Análisis</a>
+                </li>
+                <li>
+                    <a href="#">Consolas</a>
+                </li>
+                <li>
+                    <a href="#">Móvil</a>
+                </li>
+            </ul>
+            <ul class="nav-menu-right">
+                <li>
+                    <a href="#">
+                        <i class="fas fa-search"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <footer></footer>
     <script></script>
 </body>
